{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 27,
  "lineage": "7b1a8d28-a548-ffec-a8ed-24b3a3418562",
  "resources": [
    {
      "module": "module.network_from_module",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "public_lb",
      "provider": "module.network_from_module.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/ecb11861-0471-423a-981d-cfa77fb117b2/resourceGroups/alf-dev-project1-azurerm_resource_group/providers/Microsoft.Network/loadBalancers/alf-dev-project1-lb-public/frontendIPConfigurations/alf-dev-project1-lb-fe-public",
                "name": "alf-dev-project1-lb-fe-public",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/ecb11861-0471-423a-981d-cfa77fb117b2/resourceGroups/alf-dev-project1-azurerm_resource_group/providers/Microsoft.Network/publicIPAddresses/PublicIPForLB"
              }
            ],
            "id": "/subscriptions/ecb11861-0471-423a-981d-cfa77fb117b2/resourceGroups/alf-dev-project1-azurerm_resource_group/providers/Microsoft.Network/loadBalancers/alf-dev-project1-lb-public",
            "location": "switzerlandnorth",
            "name": "alf-dev-project1-lb-public",
            "resource_group_name": "alf-dev-project1-azurerm_resource_group",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.network_from_module.azurerm_public_ip.public_ip",
            "module.network_from_module.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network_from_module",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "public_lb_backend_pool",
      "provider": "module.network_from_module.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ecb11861-0471-423a-981d-cfa77fb117b2/resourceGroups/alf-dev-project1-azurerm_resource_group/providers/Microsoft.Network/loadBalancers/alf-dev-project1-lb-public/backendAddressPools/alf-dev-project1-lb-backend-pool-public",
            "loadbalancer_id": "/subscriptions/ecb11861-0471-423a-981d-cfa77fb117b2/resourceGroups/alf-dev-project1-azurerm_resource_group/providers/Microsoft.Network/loadBalancers/alf-dev-project1-lb-public",
            "name": "alf-dev-project1-lb-backend-pool-public"
          },
          "dependencies": [
            "module.network_from_module.azurerm_lb.public_lb",
            "module.network_from_module.azurerm_public_ip.public_ip",
            "module.network_from_module.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network_from_module",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_private",
      "provider": "module.network_from_module.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ecb11861-0471-423a-981d-cfa77fb117b2/resourceGroups/alf-dev-project1-azurerm_resource_group/providers/Microsoft.Network/networkSecurityGroups/alf-dev-project1-nsg-private",
            "location": "switzerlandnorth",
            "name": "alf-dev-project1-nsg-private",
            "resource_group_name": "alf-dev-project1-azurerm_resource_group",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_from_module.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network_from_module",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_public",
      "provider": "module.network_from_module.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ecb11861-0471-423a-981d-cfa77fb117b2/resourceGroups/alf-dev-project1-azurerm_resource_group/providers/Microsoft.Network/networkSecurityGroups/alf-dev-project1-nsg-public",
            "location": "switzerlandnorth",
            "name": "alf-dev-project1-nsg-public",
            "resource_group_name": "alf-dev-project1-azurerm_resource_group",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.1.2.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_internet_in",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_from_module.azurerm_resource_group.rg",
            "module.network_from_module.azurerm_subnet.net_public",
            "module.network_from_module.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network_from_module",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "module.network_from_module.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/ecb11861-0471-423a-981d-cfa77fb117b2/resourceGroups/alf-dev-project1-azurerm_resource_group/providers/Microsoft.Network/publicIPAddresses/PublicIPForLB",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.103.224.222",
            "ip_version": "IPv4",
            "location": "switzerlandnorth",
            "name": "PublicIPForLB",
            "resource_group_name": "alf-dev-project1-azurerm_resource_group",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.network_from_module.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network_from_module",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "net_private",
      "provider": "module.network_from_module.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ecb11861-0471-423a-981d-cfa77fb117b2/resourceGroups/alf-dev-project1-azurerm_resource_group/providers/Microsoft.Network/virtualNetworks/alf-dev-project1-vnet/subnets/alf-dev-project1-net_private",
            "name": "alf-dev-project1-net_private",
            "resource_group_name": "alf-dev-project1-azurerm_resource_group",
            "virtual_network_name": "alf-dev-project1-vnet"
          },
          "dependencies": [
            "module.network_from_module.azurerm_resource_group.rg",
            "module.network_from_module.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network_from_module",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "net_public",
      "provider": "module.network_from_module.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ecb11861-0471-423a-981d-cfa77fb117b2/resourceGroups/alf-dev-project1-azurerm_resource_group/providers/Microsoft.Network/virtualNetworks/alf-dev-project1-vnet/subnets/alf-dev-project1-net_public",
            "name": "alf-dev-project1-net_public",
            "resource_group_name": "alf-dev-project1-azurerm_resource_group",
            "virtual_network_name": "alf-dev-project1-vnet"
          },
          "dependencies": [
            "module.network_from_module.azurerm_resource_group.rg",
            "module.network_from_module.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network_from_module",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "private_nsg_association",
      "provider": "module.network_from_module.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ecb11861-0471-423a-981d-cfa77fb117b2/resourceGroups/alf-dev-project1-azurerm_resource_group/providers/Microsoft.Network/virtualNetworks/alf-dev-project1-vnet/subnets/alf-dev-project1-net_private",
            "network_security_group_id": "/subscriptions/ecb11861-0471-423a-981d-cfa77fb117b2/resourceGroups/alf-dev-project1-azurerm_resource_group/providers/Microsoft.Network/networkSecurityGroups/alf-dev-project1-nsg-private",
            "subnet_id": "/subscriptions/ecb11861-0471-423a-981d-cfa77fb117b2/resourceGroups/alf-dev-project1-azurerm_resource_group/providers/Microsoft.Network/virtualNetworks/alf-dev-project1-vnet/subnets/alf-dev-project1-net_private"
          },
          "dependencies": [
            "module.network_from_module.azurerm_network_security_group.nsg_private",
            "module.network_from_module.azurerm_resource_group.rg",
            "module.network_from_module.azurerm_subnet.net_private",
            "module.network_from_module.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network_from_module",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "public_nsg_association",
      "provider": "module.network_from_module.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ecb11861-0471-423a-981d-cfa77fb117b2/resourceGroups/alf-dev-project1-azurerm_resource_group/providers/Microsoft.Network/virtualNetworks/alf-dev-project1-vnet/subnets/alf-dev-project1-net_public",
            "network_security_group_id": "/subscriptions/ecb11861-0471-423a-981d-cfa77fb117b2/resourceGroups/alf-dev-project1-azurerm_resource_group/providers/Microsoft.Network/networkSecurityGroups/alf-dev-project1-nsg-public",
            "subnet_id": "/subscriptions/ecb11861-0471-423a-981d-cfa77fb117b2/resourceGroups/alf-dev-project1-azurerm_resource_group/providers/Microsoft.Network/virtualNetworks/alf-dev-project1-vnet/subnets/alf-dev-project1-net_public"
          },
          "dependencies": [
            "module.network_from_module.azurerm_network_security_group.nsg_public",
            "module.network_from_module.azurerm_resource_group.rg",
            "module.network_from_module.azurerm_subnet.net_public",
            "module.network_from_module.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network_from_module",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "module.network_from_module.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/8"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a82307d8-6208-4cb4-bd17-4e0ebff0f440",
            "id": "/subscriptions/ecb11861-0471-423a-981d-cfa77fb117b2/resourceGroups/alf-dev-project1-azurerm_resource_group/providers/Microsoft.Network/virtualNetworks/alf-dev-project1-vnet",
            "location": "switzerlandnorth",
            "name": "alf-dev-project1-vnet",
            "resource_group_name": "alf-dev-project1-azurerm_resource_group",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/ecb11861-0471-423a-981d-cfa77fb117b2/resourceGroups/alf-dev-project1-azurerm_resource_group/providers/Microsoft.Network/virtualNetworks/alf-dev-project1-vnet/subnets/alf-dev-project1-net_private",
                "name": "alf-dev-project1-net_private",
                "security_group": "/subscriptions/ecb11861-0471-423a-981d-cfa77fb117b2/resourceGroups/alf-dev-project1-azurerm_resource_group/providers/Microsoft.Network/networkSecurityGroups/alf-dev-project1-nsg-private"
              },
              {
                "address_prefix": "10.1.2.0/24",
                "id": "/subscriptions/ecb11861-0471-423a-981d-cfa77fb117b2/resourceGroups/alf-dev-project1-azurerm_resource_group/providers/Microsoft.Network/virtualNetworks/alf-dev-project1-vnet/subnets/alf-dev-project1-net_public",
                "name": "alf-dev-project1-net_public"
              }
            ]
          },
          "dependencies": [
            "module.network_from_module.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}